syntax = "proto3";

package user;

option go_package = "library-management/proto/gen/user;user";

// The User message contains user information
message User {
    uint64 id = 1;
    string username = 2;
    string password = 3;
}

// The BorrowingCount message contains borrowing count information
message BorrowingCount {
    uint64 book_id = 1;
    uint64 count = 2;
}

// The request message for the GetUserDetails RPC
message GetUserDetailsRequest {
    uint64 id = 1;
}

// The response message for the GetUserDetails RPC
message GetUserDetailsResponse {
    User user = 1;
}

// The request message for the Authenticate RPC
message AuthenticateRequest {
    string username = 1;
    string password = 2;
}

// The response message for the Authenticate RPC
message AuthenticateResponse {
    User user = 1;
    string token = 2;
}

// The request message for the VerifyJWT RPC
message VerifyJWTRequest {
    string token = 1;
}

// The response message for the VerifyJWT RPC
message VerifyJWTResponse {
    User user = 1;
}

// The request message for the UserBorrowBook RPC
message UserBorrowBookRequest {
    uint64 user_id = 1;
    uint64 book_id = 2;
}

// The response message for the UserBorrowBook RPC
message UserBorrowBookResponse {
    string message = 1;
}

// The request message for the UserReturnBook RPC
message UserReturnBookRequest {
    uint64 id = 1;
}

// The response message for the UserReturnBook RPC
message UserReturnBookResponse {
    string message = 1;
}

// The request message for the GetBorrowingCount RPC
message GetBorrowingCountRequest {
}

// The response message for the GetBorrowingCount RPC
message GetBorrowingCountResponse {
    repeated BorrowingCount borrowing_count = 1;
}


// The UserService service definition
service UserService {
    rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
    rpc VerifyJWT(VerifyJWTRequest) returns (VerifyJWTResponse);
    rpc UserBorrowBook(UserBorrowBookRequest) returns (UserBorrowBookResponse);
    rpc UserReturnBook(UserReturnBookRequest) returns (UserReturnBookResponse);
    rpc GetBorrowingCount(GetBorrowingCountRequest) returns (GetBorrowingCountResponse);
}
